--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">JewishBank</string>
     <string name="title_activity_posicion_global">PosicionGlobal</string>
+    <string name="dialogo_linea_1">Dialogo Linea 1</string>
+    <string name="dialogo_linea_2">Dialogo Linea 2</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
