--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">JewishBank</string>
     <string name="title_activity_posicion_global">PosicionGlobal</string>
-    <string name="cambiarcontrasenya">❔ Cambiar contraseña</string>
-    <string name="posicionglobal"> 🌍 Posición Global</string>
-    <string name="transferencias">💶 Transferencias</string>
+    <string name="cambiarcontrasenya">Cambiar contraseña</string>
+    <string name="posicionglobal">Posición Global</string>
+    <string name="transferencias">Transferencias</string>
 
     <string name="dialogo_linea_1">Dialogo Linea 1</string>
     <string name="dialogo_linea_2">Dialogo Linea 2</string>
@@ -96,8 +96,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
-    <string name="action_settings">🔧
- Settings</string>
+    <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
