--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,12 @@
 
     <string name="dialogo_linea_1">Dialogo Linea 1</string>
     <string name="dialogo_linea_2">Dialogo Linea 2</string>
+
+    <string name="itemtodos">Mostrar todos</string>
+    <string name="itemtipo0">Mostrar tipo 0</string>
+    <string name="itemtipo1">Mostrar tipo 1</string>
+    <string name="itemtipo2">Mostrar tipo 2</string>
+
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
