--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,19 @@
     <string name="posicionglobal">Posición Global</string>
     <string name="transferencias">Transferencias</string>
 
+    <string name="btnlogin">Logearse</string>
+    <string name="btnregistro">Registrarse</string>
+    <string name="btnsalir">Salir</string>
+    <string name="btnreiniciarbbdd">Reiniciar BBDD</string>
+    <string name="dnilogin">DNI</string>
+    <string name="dniInput">Introduzca su dni</string>
+    <string name="passlogin">Contraseña</string>
+    <string name="passInput">Introduzca su contraseña</string>
+    <string name="changePassOption">Cambiar la contraseña</string>
+    <string name="openTransOption">Abrir Transferencias</string>
+    <string name="openGlobalPos">Abrir Posicion Global</string>
+    <string name="openSettings">Abrir Ajustes</string>
+
     <string name="dialogo_linea_1">Dialogo Linea 1</string>
     <string name="dialogo_linea_2">Dialogo Linea 2</string>
 
