terminado lo basico mas actividad y funcionamiento, faltan mejoras esteticas

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,7 +26,7 @@
     <string name="itemtipo0">Show Tipe 0</string>
     <string name="itemtipo1">Show Tipe 1</string>
     <string name="itemtipo2">Show Tipe 2</string>
-
+    <string name="cajerosadmin">ATM Administration</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
